fix Dashboard and ButtonAddTransaction
- Dashboard and button adjusted to make sure that button is not covering delete or edit button in the transactions table

--- a/src/components/Table/TableDesktop/TableDesktop.module.scss
+++ b/src/components/Table/TableDesktop/TableDesktop.module.scss
@@ -109,7 +109,7 @@
     display: block;
 
     @media screen and (min-width: 768px) and (max-width: 1279px) {
-      height: calc(100vh - 60px - 214px - 58px - 20px - 32px - 30px);
+      height: calc(100vh - 60px - 214px - 58px - 20px - 32px - 30px - 40px);
     }
 
     @media screen and (min-width: 1280px) {
